tarea1_parser.output
Grammar

    0 $accept: input $end

    1 input: declarations_block statement_list

    2 declarations_block: ε
    3                   | TK_DEF TK_DECLARATION declarations_list TK_END

    4 declarations_list: ε
    5                  | declarations_list declarations

    6 declarations: TK_IDENTIFICADOR TK_DOSPUNTOS TK_INT TK_PUNTOCOMA

    7 statement_list: ε
    8               | statement_list statement

    9 statement: write_stmt
   10          | assignment_stmt

   11 write_stmt: TK_WRITE TK_ABREP expression TK_CIERRAP TK_PUNTOCOMA

   12 assignment_stmt: TK_IDENTIFICADOR TK_IGUAL expression TK_PUNTOCOMA

   13 expression: expression TK_MAS factor
   14           | expression TK_MENOS factor
   15           | factor

   16 factor: factor TK_MULTI term
   17       | factor TK_DIVI term
   18       | term

   19 term: TK_NUMBER
   20     | TK_IDENTIFICADOR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TK_DEF (258) 3
    TK_DECLARATION (259) 3
    TK_INT (260) 6
    TK_END (261) 3
    TK_WRITE (262) 11
    TK_PUNTOCOMA (263) 6 11 12
    TK_DOSPUNTOS (264) 6
    TK_MAS (265) 13
    TK_MENOS (266) 14
    TK_MULTI (267) 16
    TK_DIVI (268) 17
    TK_ABREP (269) 11
    TK_CIERRAP (270) 11
    TK_IGUAL (271) 12
    TK_NUMBER <int_t> (272) 19
    TK_IDENTIFICADOR <string_t> (273) 6 12 20


Nonterminals, with rules where they appear

    $accept (19)
        on left: 0
    input (20)
        on left: 1
        on right: 0
    declarations_block (21)
        on left: 2 3
        on right: 1
    declarations_list (22)
        on left: 4 5
        on right: 3 5
    declarations (23)
        on left: 6
        on right: 5
    statement_list (24)
        on left: 7 8
        on right: 1 8
    statement (25)
        on left: 9 10
        on right: 8
    write_stmt <int_t> (26)
        on left: 11
        on right: 9
    assignment_stmt <int_t> (27)
        on left: 12
        on right: 10
    expression <int_t> (28)
        on left: 13 14 15
        on right: 11 12 13 14
    factor <int_t> (29)
        on left: 16 17 18
        on right: 13 14 15 16 17
    term <int_t> (30)
        on left: 19 20
        on right: 16 17 18


State 0

    0 $accept: • input $end

    TK_DEF  shift, and go to state 1

    $default  reduce using rule 2 (declarations_block)

    input               go to state 2
    declarations_block  go to state 3


State 1

    3 declarations_block: TK_DEF • TK_DECLARATION declarations_list TK_END

    TK_DECLARATION  shift, and go to state 4


State 2

    0 $accept: input • $end

    $end  shift, and go to state 5


State 3

    1 input: declarations_block • statement_list

    $default  reduce using rule 7 (statement_list)

    statement_list  go to state 6


State 4

    3 declarations_block: TK_DEF TK_DECLARATION • declarations_list TK_END

    $default  reduce using rule 4 (declarations_list)

    declarations_list  go to state 7


State 5

    0 $accept: input $end •

    $default  accept


State 6

    1 input: declarations_block statement_list •
    8 statement_list: statement_list • statement

    TK_WRITE          shift, and go to state 8
    TK_IDENTIFICADOR  shift, and go to state 9

    $default  reduce using rule 1 (input)

    statement        go to state 10
    write_stmt       go to state 11
    assignment_stmt  go to state 12


State 7

    3 declarations_block: TK_DEF TK_DECLARATION declarations_list • TK_END
    5 declarations_list: declarations_list • declarations

    TK_END            shift, and go to state 13
    TK_IDENTIFICADOR  shift, and go to state 14

    declarations  go to state 15


State 8

   11 write_stmt: TK_WRITE • TK_ABREP expression TK_CIERRAP TK_PUNTOCOMA

    TK_ABREP  shift, and go to state 16


State 9

   12 assignment_stmt: TK_IDENTIFICADOR • TK_IGUAL expression TK_PUNTOCOMA

    TK_IGUAL  shift, and go to state 17


State 10

    8 statement_list: statement_list statement •

    $default  reduce using rule 8 (statement_list)


State 11

    9 statement: write_stmt •

    $default  reduce using rule 9 (statement)


State 12

   10 statement: assignment_stmt •

    $default  reduce using rule 10 (statement)


State 13

    3 declarations_block: TK_DEF TK_DECLARATION declarations_list TK_END •

    $default  reduce using rule 3 (declarations_block)


State 14

    6 declarations: TK_IDENTIFICADOR • TK_DOSPUNTOS TK_INT TK_PUNTOCOMA

    TK_DOSPUNTOS  shift, and go to state 18


State 15

    5 declarations_list: declarations_list declarations •

    $default  reduce using rule 5 (declarations_list)


State 16

   11 write_stmt: TK_WRITE TK_ABREP • expression TK_CIERRAP TK_PUNTOCOMA

    TK_NUMBER         shift, and go to state 19
    TK_IDENTIFICADOR  shift, and go to state 20

    expression  go to state 21
    factor      go to state 22
    term        go to state 23


State 17

   12 assignment_stmt: TK_IDENTIFICADOR TK_IGUAL • expression TK_PUNTOCOMA

    TK_NUMBER         shift, and go to state 19
    TK_IDENTIFICADOR  shift, and go to state 20

    expression  go to state 24
    factor      go to state 22
    term        go to state 23


State 18

    6 declarations: TK_IDENTIFICADOR TK_DOSPUNTOS • TK_INT TK_PUNTOCOMA

    TK_INT  shift, and go to state 25


State 19

   19 term: TK_NUMBER •

    $default  reduce using rule 19 (term)


State 20

   20 term: TK_IDENTIFICADOR •

    $default  reduce using rule 20 (term)


State 21

   11 write_stmt: TK_WRITE TK_ABREP expression • TK_CIERRAP TK_PUNTOCOMA
   13 expression: expression • TK_MAS factor
   14           | expression • TK_MENOS factor

    TK_MAS      shift, and go to state 26
    TK_MENOS    shift, and go to state 27
    TK_CIERRAP  shift, and go to state 28


State 22

   15 expression: factor •
   16 factor: factor • TK_MULTI term
   17       | factor • TK_DIVI term

    TK_MULTI  shift, and go to state 29
    TK_DIVI   shift, and go to state 30

    $default  reduce using rule 15 (expression)


State 23

   18 factor: term •

    $default  reduce using rule 18 (factor)


State 24

   12 assignment_stmt: TK_IDENTIFICADOR TK_IGUAL expression • TK_PUNTOCOMA
   13 expression: expression • TK_MAS factor
   14           | expression • TK_MENOS factor

    TK_PUNTOCOMA  shift, and go to state 31
    TK_MAS        shift, and go to state 26
    TK_MENOS      shift, and go to state 27


State 25

    6 declarations: TK_IDENTIFICADOR TK_DOSPUNTOS TK_INT • TK_PUNTOCOMA

    TK_PUNTOCOMA  shift, and go to state 32


State 26

   13 expression: expression TK_MAS • factor

    TK_NUMBER         shift, and go to state 19
    TK_IDENTIFICADOR  shift, and go to state 20

    factor  go to state 33
    term    go to state 23


State 27

   14 expression: expression TK_MENOS • factor

    TK_NUMBER         shift, and go to state 19
    TK_IDENTIFICADOR  shift, and go to state 20

    factor  go to state 34
    term    go to state 23


State 28

   11 write_stmt: TK_WRITE TK_ABREP expression TK_CIERRAP • TK_PUNTOCOMA

    TK_PUNTOCOMA  shift, and go to state 35


State 29

   16 factor: factor TK_MULTI • term

    TK_NUMBER         shift, and go to state 19
    TK_IDENTIFICADOR  shift, and go to state 20

    term  go to state 36


State 30

   17 factor: factor TK_DIVI • term

    TK_NUMBER         shift, and go to state 19
    TK_IDENTIFICADOR  shift, and go to state 20

    term  go to state 37


State 31

   12 assignment_stmt: TK_IDENTIFICADOR TK_IGUAL expression TK_PUNTOCOMA •

    $default  reduce using rule 12 (assignment_stmt)


State 32

    6 declarations: TK_IDENTIFICADOR TK_DOSPUNTOS TK_INT TK_PUNTOCOMA •

    $default  reduce using rule 6 (declarations)


State 33

   13 expression: expression TK_MAS factor •
   16 factor: factor • TK_MULTI term
   17       | factor • TK_DIVI term

    TK_MULTI  shift, and go to state 29
    TK_DIVI   shift, and go to state 30

    $default  reduce using rule 13 (expression)


State 34

   14 expression: expression TK_MENOS factor •
   16 factor: factor • TK_MULTI term
   17       | factor • TK_DIVI term

    TK_MULTI  shift, and go to state 29
    TK_DIVI   shift, and go to state 30

    $default  reduce using rule 14 (expression)


State 35

   11 write_stmt: TK_WRITE TK_ABREP expression TK_CIERRAP TK_PUNTOCOMA •

    $default  reduce using rule 11 (write_stmt)


State 36

   16 factor: factor TK_MULTI term •

    $default  reduce using rule 16 (factor)


State 37

   17 factor: factor TK_DIVI term •

    $default  reduce using rule 17 (factor)
